--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.6.3",
+    "@types/node": "^10.12.18",
     "bootstrap": "^4.2.1",
     "bootstrap-loader": "^3.0.2",
+    "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.1.0",
     "export-loader": "^1.0.52",
     "file-loader": "^3.0.1",
-    "font-awesome": "^4.7.0",
-    "font-awesome-loader": "^1.0.2",
     "html-webpack-plugin": "^3.2.0",
     "imports-loader": "^0.8.0",
     "jquery": "^3.3.1",
+    "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "popper.js": "^1.14.6",
     "postcss": "^7.0.7",
@@ -28,6 +30,8 @@
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^2.0.0",
     "style-loader": "^0.23.1",
+    "ts-loader": "^5.3.2",
+    "typescript": "^3.2.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2",
