--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start:dev": "set NODE_ENV=development&&webpack-dev-server --mode development"
+    "start:dev": "set NODE_ENV=development&&webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +23,7 @@
     "jquery": "^3.3.1",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "popper.js": "^1.14.6",
     "postcss": "^7.0.7",
     "postcss-loader": "^3.0.0",
@@ -32,8 +33,9 @@
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.2",
     "typescript": "^3.2.2",
+    "uglifyjs-webpack-plugin": "^2.1.1",
     "url-loader": "^1.1.2",
-    "webpack": "^4.28.2",
+    "webpack": "^4.28.3",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14"
   },
