--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start:dev": "set NODE_ENV=development&&webpack-dev-server"
+    "start:dev": "set NODE_ENV=development&&webpack-dev-server --open --config webpack.dev.js",
+    "start:prod": "set NODE_ENV=production&&webpack-dev-server --open --config webpack.prod.js"
   },
   "author": "",
   "license": "ISC",
@@ -37,7 +38,8 @@
     "url-loader": "^1.1.2",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.1.14",
+    "webpack-merge": "^4.1.5"
   },
   "dependencies": {}
 }
