--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start:dev": "set NODE_ENV=development&&webpack-dev-server --open --config webpack.dev.js",
-    "start:prod": "set NODE_ENV=production&&webpack-dev-server --open --config webpack.prod.js"
+    "start:dev": "set NODE_ENV=development&&webpack-dev-server --config webpack.dev.js",
+    "start:prod": "set NODE_ENV=production&&webpack-dev-server --config webpack.prod.js"
   },
   "author": "",
   "license": "ISC",
