--- a/.bootstraprc
+++ b/.bootstraprc
@@ -45,7 +45,7 @@ env:
 # For example, _variables.scss contains:
 # $input-color: $gray !default;
 # This means you can define $input-color before we load _variables.scss
-# preBootstrapCustomizations: ./app/styles/bootstrap/pre-customizations.scss
+preBootstrapCustomizations: ./src/scss/resources.scss
 
 # This gets loaded after bootstrap/variables is loaded and before bootstrap is loaded.
 # A good example of this is when you want to override a bootstrap variable to be based
@@ -64,7 +64,7 @@ env:
 # Import your custom styles here. You have access to all the bootstrap variables. If you require
 # your sass files separately, you will not have access to the bootstrap variables, mixins, clases, etc.
 # Usually this endpoint-file contains list of @imports of your application styles.
-#appStyles: ./src/scss/app.scss
+# appStyles: ./src/scss/app.scss
 
 ### Bootstrap styles
 styles:
