--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "css-loader": "^2.1.0",
     "export-loader": "^1.0.52",
     "file-loader": "^3.0.1",
+    "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^3.2.0",
     "imports-loader": "^0.8.0",
     "jquery": "^3.3.1",
