--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build:dev": "set NODE_ENV=development&&webpack --config webpack.dev.js",
+    "build:prod": "set NODE_ENV=production&&webpack --config webpack.prod.js",
     "start:dev": "set NODE_ENV=development&&webpack-dev-server --config webpack.dev.js",
     "start:prod": "set NODE_ENV=production&&webpack-dev-server --config webpack.prod.js"
   },
@@ -38,6 +39,7 @@
     "uglifyjs-webpack-plugin": "^2.1.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.28.3",
+    "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14",
     "webpack-merge": "^4.1.5"
