--- a/package.json
+++ b/package.json
@@ -13,17 +13,22 @@
   "license": "ISC",
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.6.3",
+    "@types/knockout": "^3.4.63",
+    "@types/knockout-postbox": "0.0.0",
     "@types/node": "^10.12.18",
     "bootstrap": "^4.2.1",
     "bootstrap-loader": "^3.0.2",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.1.0",
-    "export-loader": "^1.0.52",
+    "exports-loader": "^0.7.0",
     "file-loader": "^3.0.1",
     "font-awesome": "^4.7.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "imports-loader": "^0.8.0",
     "jquery": "^3.3.1",
+    "knockout": "^3.4.2",
+    "knockout-postbox": "^0.6.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
