--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.1.0",
     "exports-loader": "^0.7.0",
+    "expose-loader": "^0.7.5",
     "file-loader": "^3.0.1",
     "font-awesome": "^4.7.0",
     "html-loader": "^0.5.5",
