--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jquery": "^3.3.1",
     "knockout": "^3.4.2",
     "knockout-postbox": "^0.6.0",
+    "lodash": "^4.17.11",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
